--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">6thGear TWSwipe</string>
     <string name="action_settings">About</string>
     <string name="title_activity_reset_dialog">Swipe Reset</string>
-    <string name="swipe_reset_title">Reset your swipe app</string>
+    <string name="swipe_reset_title">Reset swipe action</string>
     <string name="swipe_reset_no_prefs">Your swipe app preferences are empty. Would you like to set  a default swipe behaviour now?</string>
-    <string name="swipe_reset_message">"Your current default swipe action is set to %1$s\n\nTo reset the preferences and set a different swipe action, please click OK"</string>
+    <string name="swipe_reset_message">"Your current default swipe action is set to %1$s\n\nTo reset the preferences and set a different swipe action, please click RESET"</string>
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="prefs_saved_dialog_title">Preference Saved</string>
@@ -21,7 +21,11 @@
     \nAs a standalone app it will have no effect whatsoever on your built in launcher. It needs to be modded into the TW Launcher application by your rom developer.
     \nIf this app was included in the rom you're using, chances are your TW Launcher is modded accordingly and once you set a custom action, your launcher's swipe feature will display it.
     \nWe hope you enjoy our little contribution to the android development comunity
-    \n6thGear Team: Wuby986, Peppe130 and Daxgirl"</string>
+    \n6thGear Team: Wuby986 and Daxgirl"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="set_up_twswipe">Set Up TwSwipe</string>
 
 
 </resources>
