Added some translations Added signed apk

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -23,4 +23,5 @@
         \nSe questa applicazione era inclusa nella Rom che hai installato allora il TW launcher che hai installato la supporta.
         \nSperiamo vi piaccia il nostro contributo alla comunità android.
         \n6ThGear Team: DaxGirl, Peppe130 e Wuby986"</string>
+    <string name="set_up_twswipe">Impostare TwSwipe</string>
 </resources>
