--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -22,4 +22,5 @@
     \nבמידה ויישום זה כלול ברום שהינך משתמש בו, רוב הסיכויים שיישום TWLauncher עבר את השינוי הדרוש ובמידה ותקבע מחווה בהתאמה אישית, תכונת ה-swipe של ה-Launcher המובנה תותאם לפי בחירתך.
     \nכולנו תקווה שתהנו מתרומתנו הקטנה לקהילת הפיתוח לאנדרואיד!
     \nהצוות שלנו: Wuby986, Peppe130 ו-Daxgirl"</string>
+    <string name="set_up_twswipe">הגדר TwSwipe</string>
 </resources>
